# ROS-Workshop-Fall-2024

./: README.md
part-1/module-1-docker-and-cli/: Dockerfile  README.md
part-1/module-2-ros-intro/: Dockerfile  README.md  ros_entrypoint.sh
part-1/module-2-ros-intro/src/hello_world/: sub.py
part-1/module-3-launch-package/: Dockerfile  README.md
part-1/module-4-parameters-and-bagging/: Dockerfile  README.md
part-2/module-5-language-agnostic/: Dockerfile  README.md
part-2/module-5-multilingual-design/: Dockerfile  README.md
part-2/module-5-multilingual-design/workspace_folder/src/example_pkg_cpp/: CMakeLists.txt  package.xml
part-2/module-5-multilingual-design/workspace_folder/src/example_pkg_cpp/src/: testpub.cpp  testsub.cpp
part-2/module-6-behavior-trees/: Dockerfile  README.md
part-2/module-7-services/: Dockerfile  README.md  service_client.py
part-2/module-8-actions/: Dockerfile  README.md
part-2/module-9-visualization/: Dockerfile  README.md
tmp/workshop-1-docker-and-cli/: Dockerfile  README.md
tmp/workshop-2-ros-intro/: Dockerfile  README.md
tmp/workshop-2-ros-intro/src/hello_world/: pub.py
tmp/workshop-3-launch-package/: Dockerfile  README.md  test.launch.py
tmp/workshop-4-parameters-and-bagging/: Dockerfile  README.md
tmp/workshop-5-behavior-trees/: Dockerfile  README.md
tmp/workshop-5-behavior-trees/py_trees/: setup.py
tmp/workshop-5-behavior-trees/py_trees/py_trees_ros_tutorials/: __init__.py  basic_behaviour.py  (+2 more)
tmp/workshop-6-actions/: README.md  sample_action_server.py
tmp/workshop-7-foxglove/: Dockerfile
(+34 files in other folders)
